added comments and logs in fare rule service